Fix list view size and sidebar avatars spacing

--- a/app/assets/stylesheets/sidebar.css
+++ b/app/assets/stylesheets/sidebar.css
@@ -49,7 +49,7 @@
   flex-direction: row;
   width: 40%;
   height: 100%;
-  margin: 18px;
+  margin-left: 18px;
 }
 
 .teammates-right {
